force-app/main/default/objects/Contract/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <label>Liability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1x software amounts</fullName>
            </value>
            <value>
                <fullName>1.5x software amounts</fullName>
            </value>
            <value>
                <fullName>2x software amounts</fullName>
            </value>
            <value>
                <fullName>1x software &amp; services amounts</fullName>
            </value>
            <value>
                <fullName>1.5x software &amp; services amounts</fullName>
            </value>
            <value>
                <fullName>2x software &amp; services amounts</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>N/A (Master Terms Apply)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>