force-app/main/default/objects/Contract/fields/Liability_Confidentiality_Exception__c.field-meta.xml
<CustomField>
    <fullName>Liability_Confidentiality_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Liability Confidentiality Exception</label>
    <type>Checkbox</type>
</CustomField>