force-app/main/default/objects/Contract/fields/Manual_OSA_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Manual_OSA_Indicator__c</fullName>
    <label>Manual OSA Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual Excel</fullName>
            </value>
            <value>
                <fullName>Manual PDF</fullName>
            </value>
            <value>
                <fullName>Edit Existing PDF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>