force-app/main/default/objects/Contract/fields/Multi_Product_Deal__c.field-meta.xml
<CustomField>
    <fullName>Multi_Product_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-Product Deal</label>
    <type>Checkbox</type>
</CustomField>