force-app/main/default/objects/Contract/fields/Network_Configuration_Datasheet__c.field-meta.xml
<CustomField>
    <fullName>Network_Configuration_Datasheet__c</fullName>
    <label>Network Configuration Datasheet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>