force-app/main/default/objects/Contract/fields/Non_cancelable_Multiyear_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Non_cancelable_Multiyear_Agreements__c</fullName>
    <label>Non-cancelable Multiyear Agreements</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2 year</fullName>
            </value>
            <value>
                <fullName>3 year</fullName>
            </value>
            <value>
                <fullName>4 year</fullName>
            </value>
            <value>
                <fullName>5 year</fullName>
            </value>
            <value>
                <fullName>&gt;5 year</fullName>
            </value>
            <value>
                <fullName>1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>