force-app/main/default/objects/Contract/fields/Old_Contract_Reference__c.field-meta.xml
<CustomField>
    <fullName>Old_Contract_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Contract Reference</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Old Contract Reference)</relationshipLabel>
    <relationshipName>Contracts5</relationshipName>
    <type>Lookup</type>
</CustomField>