force-app/main/default/objects/Contract/fields/OP4I_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Sales_Segment__c</fullName>
    <formula>SBQQ__Quote__r.OP4I_Sales_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Sales Segment</label>
    <type>Text</type>
</CustomField>