force-app/main/default/objects/Contract/fields/Order_and_Sale_Agreement2__c.field-meta.xml
<CustomField>
    <fullName>Order_and_Sale_Agreement2__c</fullName>
    <label>Order and Sale Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required</fullName>
                <default>true</default>
                <label>Required</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>