force-app/main/default/objects/Contract/fields/OSA_Auto_renewal_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>OSA_Auto_renewal_Exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#INC-114812</description>
    <label>OSA Auto-renewal Exclusion</label>
    <type>Checkbox</type>
</CustomField>