force-app/main/default/objects/Contract/fields/OSA_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>OSA_Signature_Date__c</fullName>
    <label>OSA Signature Date</label>
    <type>Date</type>
</CustomField>