force-app/main/default/objects/Contract/fields/OSA_Type__c.field-meta.xml
<CustomField>
    <fullName>OSA_Type__c</fullName>
    <description>We use OSA documents for both master contracts, and for addenda or revisions to those contracts. This field tells you what type this OSA is.</description>
    <inlineHelpText>We use OSA documents for both master contracts, and for addenda or revisions to those contracts. This field tells you what type this OSA is.</inlineHelpText>
    <label>OSA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Master Contract</fullName>
                <default>true</default>
                <label>Master Contract</label>
            </value>
            <value>
                <fullName>Addendum or Revision</fullName>
            </value>
            <value>
                <fullName>Services Change Order</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Services Change Order (Internal)</fullName>
            </value>
            <value>
                <fullName>Legacy Rekoop Paper</fullName>
            </value>
            <value>
                <fullName>OnePlace Legacy Agreement</fullName>
            </value>
            <value>
                <fullName>Repstor Legacy Agreement</fullName>
            </value>
            <value>
                <fullName>DealCloud Legacy</fullName>
            </value>
            <value>
                <fullName>Billstream Legacy Agreement</fullName>
            </value>
            <value>
                <fullName>Legacy Polar Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>