force-app/main/default/objects/Contract/fields/Parent_Contract__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This points to the main contract for this customer. If this Contract is the master OSA, this field is blank.</description>
    <inlineHelpText>This points to the main contract for this customer. If this Contract is the master OSA, this field is blank.</inlineHelpText>
    <label>Parent Terms Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Addendum Contracts</relationshipLabel>
    <relationshipName>Child_OSAs</relationshipName>
    <type>Lookup</type>
</CustomField>