force-app/main/default/objects/Contract/fields/Partner_Consulting_Sale_Agreement2__c.field-meta.xml
<CustomField>
    <fullName>Partner_Consulting_Sale_Agreement2__c</fullName>
    <label>Partner Consulting Sale Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Optional</fullName>
                <default>true</default>
                <label>Optional</label>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>