force-app/main/default/objects/Contract/fields/Payment_Terms_Software__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_Software__c</fullName>
    <label>Payment Terms: Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 7</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
            <value>
                <fullName>Net 90</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Roox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>