force-app/main/default/objects/Contract/fields/Pending_Amendment_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Amendment_Date__c</fullName>
    <label>Pending Amendment Date</label>
    <type>Date</type>
</CustomField>