force-app/main/default/objects/Contract/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <description>Phone number of contract recipient</description>
    <label>Recipient Phone</label>
    <type>Phone</type>
</CustomField>