force-app/main/default/objects/Contract/fields/Recurring_Adjustment_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Adjustment_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Recurring Adjustment Renewal</description>
    <label>Recurring Adjustment Renewal</label>
    <type>Checkbox</type>
</CustomField>