force-app/main/default/objects/Contract/fields/Recurring_Per_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Per_Lawyer__c</fullName>
    <formula>Account.Account_Recurring_Per_Lawyer__c</formula>
    <label>Recurring Per Lawyer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>