force-app/main/default/objects/Contract/fields/Renewed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of BIZ-51293. To capture original contract.</description>
    <label>Renewed Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contracts (Renewed Contract)</relationshipLabel>
    <relationshipName>Contracts6</relationshipName>
    <type>Lookup</type>
</CustomField>