force-app/main/default/objects/Contract/fields/Replace_existing_agreement__c.field-meta.xml
<CustomField>
    <fullName>Replace_existing_agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this OSA replace an existing agreement?</description>
    <inlineHelpText>Does this OSA cancel an existing agreement?</inlineHelpText>
    <label>Replace existing agreement?</label>
    <type>Checkbox</type>
</CustomField>