force-app/main/default/objects/Contract/fields/Requester_2__c.field-meta.xml
<CustomField>
    <fullName>Requester_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requester 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracts9</relationshipName>
    <type>Lookup</type>
</CustomField>