force-app/main/default/objects/Contract/fields/Retainer_percentage__c.field-meta.xml
<CustomField>
    <fullName>Retainer_percentage__c</fullName>
    <label>Retainer %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>