force-app/main/default/objects/Contract/fields/Risk_Management_Program__c.field-meta.xml
<CustomField>
    <fullName>Risk_Management_Program__c</fullName>
    <label>Risk Management Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>