force-app/main/default/objects/Contract/fields/Services_Expiration_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Services_Expiration_Amendment__c</fullName>
    <inlineHelpText>Date to which services expiration was amendet to.</inlineHelpText>
    <label>Services Expiration Amendment</label>
    <type>Date</type>
</CustomField>