force-app/main/default/objects/Contract/fields/Services_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Services_Payment_Terms__c</fullName>
    <label>Services Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Services</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>FF</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Blended FF_T&amp;M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>