force-app/main/default/objects/Contract/fields/Services_Request_link__c.field-meta.xml
<CustomField>
    <fullName>Services_Request_link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Services Request link</label>
    <referenceTo>Services_SOW__c</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>