force-app/main/default/objects/Contract/fields/Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company__c</fullName>
    <description>What shipping company was used to ship the appliances on this contract?</description>
    <label>Shipping Company (Appliance 1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airborne/DHL</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>