force-app/main/default/objects/Contract/fields/Shipping_Company_Appliance_2_opt__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Company_Appliance_2_opt__c</fullName>
    <description>The shipping company used to ship a second appliance.</description>
    <label>Shipping Company (App. 2 - opt.)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airborne/DHL</fullName>
            </value>
            <value>
                <fullName>FedEx</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>