force-app/main/default/objects/Contract/fields/Software_Billing_Frequency_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Software_Billing_Frequency_Renewal__c</fullName>
    <inlineHelpText>Software Billing Frequency after Initial Term</inlineHelpText>
    <label>Software Billing Frequency (Renewal)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannual</fullName>
            </value>
            <value>
                <fullName>Quarterly Y1 Only</fullName>
            </value>
            <value>
                <fullName>Semi-annual Y1 Only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>No Software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>