force-app/main/default/objects/Contract/fields/Software_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Software_Payment_Terms__c</fullName>
    <description>built according to BIZ-47359</description>
    <label>Software Days Payment Due (Net x,1st Yr)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Software_Payment_Terms</valueSetName>
    </valueSet>
</CustomField>