force-app/main/default/objects/Contract/fields/SOW__c.field-meta.xml
<CustomField>
    <fullName>SOW__c</fullName>
    <description>Statement of Work Document</description>
    <label>SOW</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>