force-app/main/default/objects/Contract/fields/Special_Financing_Terms__c.field-meta.xml
<CustomField>
    <fullName>Special_Financing_Terms__c</fullName>
    <description>What agreements do we have on financing &amp; billing?</description>
    <label>Special Financing Terms</label>
    <type>TextArea</type>
</CustomField>